# libvsgpt

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libvsgpt.ini  libvsgpt.pc.in  libvsgpt.spec.in  pyproject.toml.in  setup.cfg.in  synclibs.ps1  synctestdata.ps1  synctestdata.sh  tox.ini
.github/workflows/: build_ossfuzz.yml
.travis/: before_install.sh  runtests.sh  script.sh
common/: byte_stream.h  common.h  config_borlandc.h  config_msc.h  config_winapi.h  file_stream.h  memory.h  narrow_string.h  system_string.h  types.h.in  wide_string.h
documentation/: GUID Partition Table (GPT) format.asciidoc
dpkg/: changelog.in  control  copyright  rules
include/: Makefile.am  libvsgpt.h  libvsgpt.h.in
include/libvsgpt/: codepage.h  definitions.h  definitions.h.in  error.h  extern.h  features.h  features.h.in  types.h  types.h.in
libvsgpt/: Makefile.am  libvsgpt.c  libvsgpt.rc  libvsgpt.rc.in  libvsgpt_boot_record.c  libvsgpt_boot_record.h  libvsgpt_checksum.c  libvsgpt_checksum.h  libvsgpt_chs_address.c  libvsgpt_chs_address.h  libvsgpt_debug.c  libvsgpt_debug.h  libvsgpt_definitions.h  libvsgpt_definitions.h.in  libvsgpt_error.c  libvsgpt_error.h  libvsgpt_extern.h  libvsgpt_io_handle.c  libvsgpt_io_handle.h  libvsgpt_libbfio.h  libvsgpt_libcdata.h  libvsgpt_libcerror.h  libvsgpt_libclocale.h  libvsgpt_libcnotify.h  libvsgpt_libcthreads.h  libvsgpt_libfcache.h  libvsgpt_libfdata.h  libvsgpt_libfguid.h  libvsgpt_libuna.h  libvsgpt_mbr_partition_entry.c  libvsgpt_mbr_partition_entry.h  libvsgpt_mbr_partition_type.c  libvsgpt_mbr_partition_type.h  libvsgpt_notify.c  libvsgpt_notify.h  libvsgpt_partition.c  libvsgpt_partition.h  libvsgpt_partition_entry.c  libvsgpt_partition_entry.h  libvsgpt_partition_table_header.c  (+21 more)
m4/: yaltools.m4
manuals/: Makefile.am  libvsgpt.3  vsgptinfo.1
msvscpp/: Makefile.am  libvsgpt.sln
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/libvsgpt/: libvsgpt.vcproj
msvscpp/pyvsgpt/: pyvsgpt.vcproj
msvscpp/vsgpt_test_boot_record/: vsgpt_test_boot_record.vcproj
msvscpp/vsgpt_test_checksum/: vsgpt_test_checksum.vcproj
msvscpp/vsgpt_test_chs_address/: vsgpt_test_chs_address.vcproj
msvscpp/vsgpt_test_error/: vsgpt_test_error.vcproj
msvscpp/vsgpt_test_io_handle/: vsgpt_test_io_handle.vcproj
msvscpp/vsgpt_test_mbr_partition_entry/: vsgpt_test_mbr_partition_entry.vcproj
msvscpp/vsgpt_test_mbr_partition_type/: vsgpt_test_mbr_partition_type.vcproj
msvscpp/vsgpt_test_notify/: vsgpt_test_notify.vcproj
msvscpp/vsgpt_test_partition/: vsgpt_test_partition.vcproj
msvscpp/vsgpt_test_partition_entry/: vsgpt_test_partition_entry.vcproj
msvscpp/vsgpt_test_partition_table_header/: vsgpt_test_partition_table_header.vcproj
msvscpp/vsgpt_test_partition_type/: vsgpt_test_partition_type.vcproj
msvscpp/vsgpt_test_partition_type_identifier/: vsgpt_test_partition_type_identifier.vcproj
msvscpp/vsgpt_test_partition_values/: vsgpt_test_partition_values.vcproj
msvscpp/vsgpt_test_section_values/: vsgpt_test_section_values.vcproj
msvscpp/vsgpt_test_sector_data/: vsgpt_test_sector_data.vcproj
msvscpp/vsgpt_test_support/: vsgpt_test_support.vcproj
msvscpp/vsgpt_test_tools_info_handle/: vsgpt_test_tools_info_handle.vcproj
msvscpp/vsgpt_test_tools_output/: vsgpt_test_tools_output.vcproj
msvscpp/vsgpt_test_tools_signal/: vsgpt_test_tools_signal.vcproj
msvscpp/vsgpt_test_volume/: vsgpt_test_volume.vcproj
msvscpp/vsgptinfo/: vsgptinfo.vcproj
ossfuzz/: Makefile.am  ossfuzz_libbfio.h  ossfuzz_libvsgpt.h  partition_fuzzer.cc  volume_fuzzer.cc
pyvsgpt/: Makefile.am  pyvsgpt.c  pyvsgpt.h  pyvsgpt_error.c  pyvsgpt_error.h  pyvsgpt_file_object_io_handle.c  pyvsgpt_file_object_io_handle.h  pyvsgpt_guid.c  pyvsgpt_guid.h  pyvsgpt_integer.c  pyvsgpt_integer.h  pyvsgpt_libbfio.h  pyvsgpt_libcerror.h  pyvsgpt_libclocale.h  pyvsgpt_libfguid.h  pyvsgpt_libvsgpt.h  pyvsgpt_partition.c  pyvsgpt_partition.h  pyvsgpt_partitions.c  pyvsgpt_partitions.h  pyvsgpt_python.h  pyvsgpt_unused.h  pyvsgpt_volume.c  pyvsgpt_volume.h
pyvsgpt-python2/: Makefile.am
pyvsgpt-python3/: Makefile.am
tests/: Makefile.am  atlocal.in  pkgbuild.sh  pyvsgpt_test_partition.py  pyvsgpt_test_support.py  pyvsgpt_test_volume.py  runtests.py  runtests.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_python_module.at  test_python_module.sh  test_tools.at  test_tools.ps1  test_tools.sh  test_vsgptinfo.ps1  test_vsgptinfo.sh  vsgpt_test_boot_record.c  vsgpt_test_checksum.c  vsgpt_test_chs_address.c  vsgpt_test_error.c  vsgpt_test_extern.h  vsgpt_test_functions.c  vsgpt_test_functions.h  vsgpt_test_getopt.c  vsgpt_test_getopt.h  vsgpt_test_io_handle.c  vsgpt_test_libbfio.h  vsgpt_test_libcerror.h  vsgpt_test_libclocale.h  vsgpt_test_libcnotify.h  vsgpt_test_libuna.h  vsgpt_test_libvsgpt.h  vsgpt_test_macros.h  vsgpt_test_mbr_partition_entry.c  vsgpt_test_mbr_partition_type.c  vsgpt_test_memory.c  vsgpt_test_memory.h  (+17 more)
tests/data/: partition_entry.1  partition_table_header.1
vsgpttools/: Makefile.am  info_handle.c  info_handle.h  vsgptinfo.c  vsgpttools_getopt.c  vsgpttools_getopt.h  vsgpttools_i18n.h  vsgpttools_libbfio.h  vsgpttools_libcerror.h  vsgpttools_libclocale.h  vsgpttools_libcnotify.h  vsgpttools_libfguid.h  vsgpttools_libuna.h  vsgpttools_libvsgpt.h  vsgpttools_output.c  vsgpttools_output.h  vsgpttools_signal.c  vsgpttools_signal.h  vsgpttools_unused.h
