include_HEADERS = \
	libvsgpt.h

pkginclude_HEADERS = \
	libvsgpt/codepage.h \
	libvsgpt/definitions.h \
	libvsgpt/error.h \
	libvsgpt/extern.h \
	libvsgpt/features.h \
	libvsgpt/types.h

EXTRA_DIST = \
	libvsgpt.h.in \
	libvsgpt/definitions.h.in \
	libvsgpt/features.h.in \
	libvsgpt/types.h.in

DISTCLEANFILES = \
	libvsgpt.h \
	libvsgpt/definitions.h \
	libvsgpt/features.h \
	libvsgpt/types.h \
	Makefile \
	Makefile.in

