MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libuna/libuna.vcproj \
	libvsgpt/libvsgpt.vcproj \
	pyvsgpt/pyvsgpt.vcproj \
	vsgpt_test_boot_record/vsgpt_test_boot_record.vcproj \
	vsgpt_test_checksum/vsgpt_test_checksum.vcproj \
	vsgpt_test_chs_address/vsgpt_test_chs_address.vcproj \
	vsgpt_test_error/vsgpt_test_error.vcproj \
	vsgpt_test_io_handle/vsgpt_test_io_handle.vcproj \
	vsgpt_test_mbr_partition_entry/vsgpt_test_mbr_partition_entry.vcproj \
	vsgpt_test_mbr_partition_type/vsgpt_test_mbr_partition_type.vcproj \
	vsgpt_test_notify/vsgpt_test_notify.vcproj \
	vsgpt_test_partition/vsgpt_test_partition.vcproj \
	vsgpt_test_partition_entry/vsgpt_test_partition_entry.vcproj \
	vsgpt_test_partition_table_header/vsgpt_test_partition_table_header.vcproj \
	vsgpt_test_partition_type_identifier/vsgpt_test_partition_type_identifier.vcproj \
	vsgpt_test_partition_values/vsgpt_test_partition_values.vcproj \
	vsgpt_test_section_values/vsgpt_test_section_values.vcproj \
	vsgpt_test_sector_data/vsgpt_test_sector_data.vcproj \
	vsgpt_test_support/vsgpt_test_support.vcproj \
	vsgpt_test_tools_info_handle/vsgpt_test_tools_info_handle.vcproj \
	vsgpt_test_tools_output/vsgpt_test_tools_output.vcproj \
	vsgpt_test_tools_signal/vsgpt_test_tools_signal.vcproj \
	vsgpt_test_volume/vsgpt_test_volume.vcproj \
	vsgptinfo/vsgptinfo.vcproj \
	libvsgpt.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

